forEnersys/DavePkg/objects/SBQQ__QuoteLine__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Code__c</fullName>
        <label>Prod. Appr. Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Level_Text__c</fullName>
        <label>Approval Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <formula>IF( 
SBQQ__Discount__c &gt;= 0.10 &amp;&amp; SBQQ__Discount__c &lt;= 0.30, &quot;&quot;, 
IF(SBQQ__Discount__c &gt; 0.30 &amp;&amp; SBQQ__Discount__c &lt;= 0.38, &quot;DSM|ASM&quot;,
IF(SBQQ__Discount__c &gt; 0.38 &amp;&amp; SBQQ__Discount__c &lt;= 0.40, &quot;GM/Sales Dir.&quot;, 
IF(SBQQ__Discount__c &gt;= 0.40, &quot;Marketing&quot;, 
&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Level_I</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Required_Final__c</fullName>
        <formula>IF(AND(Approval_Required__c=False, Approval_Required_For_Quote_Line__c=False), False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prod. Appr. Req&apos;d</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Required_For_Quote_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required For Quote Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Required_For_Rollup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required For Rollup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Battery_AH_KWH__c</fullName>
        <formula>SBQQ__Product__r.Battery_AH__c &amp; &quot; / &quot; &amp; SBQQ__Product__r.Battery_KWH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Battery A.H./KWH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Battery_Charger_Termination__c</fullName>
        <label>Battery\Charger Termination</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Battery_Dimensions__c</fullName>
        <formula>SBQQ__Product__r.Battery_Dimensions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Battery Dimensions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Battery_Family__c</fullName>
        <formula>SBQQ__Product__r.Battery_Family__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Battery Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Battery_Notes__c</fullName>
        <formula>SBQQ__Product__r.Battery_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Battery Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Battery_Part__c</fullName>
        <formula>SBQQ__Product__r.Battery_Part_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Battery Part #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Battery_Product__c</fullName>
        <formula>IF(CONTAINS(SBQQ__Product__r.Item_Group_Desc__c, &quot;BATT&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Battery Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Battery_Type__c</fullName>
        <formula>SBQQ__Product__r.Battery_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Battery Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Battery_Weight__c</fullName>
        <formula>SBQQ__Product__r.Battery_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Battery Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Family_Charger_Part__c</fullName>
        <formula>SBQQ__Product__r.Charger_Family__c &amp; &quot; / &quot; &amp; IF(ISBLANK(SBQQ__Product__r.Charger_Family__c), &quot;&quot;, SBQQ__ProductName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charger Family/Charger Part #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Input_AC_Amps_Selected__c</fullName>
        <label>Charger Input AC Amps Selected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Max_AH_Selected__c</fullName>
        <label>Charger Max AH Selected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Max_AH__c</fullName>
        <formula>IF(OR(ISBLANK(Charger_Max_AH_Selected__c), ISBLANK(TEXT(Charger_VAC_Selected__c)), ISBLANK(TEXT(Charger_Voltage_Selected__c))), SBQQ__Product__r.Charger_Max_AH__c, Charger_Max_AH_Selected__c)</formula>
        <label>Charger Max A.H.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Max_A_In_AC_Out_DC__c</fullName>
        <formula>IF(OR(ISBLANK(Charger_Input_AC_Amps_Selected__c), ISBLANK(TEXT(Charger_VAC_Selected__c)), ISBLANK(TEXT(Charger_Voltage_Selected__c))), SBQQ__Product__r.Charger_Max_Input_AC_Amps__c, Charger_Input_AC_Amps_Selected__c) &amp; &apos; / &apos; &amp; IF(OR(ISBLANK(Charger_Output_DC_Amps_Selected__c), ISBLANK(TEXT(Charger_VAC_Selected__c)), ISBLANK(TEXT(Charger_Voltage_Selected__c))), SBQQ__Product__r.Charger_DC_Output_Amps__c, Charger_Output_DC_Amps_Selected__c)</formula>
        <label>Charger Max (A) In AC / Out DC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Mod_Cab__c</fullName>
        <formula>SBQQ__Product__r.Charger_Number_of_Modules__c  &amp; &quot; / &quot; &amp;  SBQQ__Product__r.Charger_Cabinet_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charger # Mod/Cab</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Notes__c</fullName>
        <formula>SBQQ__Product__r.Charger_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charger Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Output_DC_Amps_Selected__c</fullName>
        <label>Charger Output DC Amps Selected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Product__c</fullName>
        <formula>IF(CONTAINS(SBQQ__Product__r.Item_Group_Desc__c,&quot;CHARGER&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charger Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charger_VAC_Options_Read_Only__c</fullName>
        <formula>Charger_VAC_Options__c</formula>
        <label>Chgr VAC Options</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_VAC_Options__c</fullName>
        <label>Charger VAC Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_VAC_Selected__c</fullName>
        <label>Charger VAC Selected</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>VAC</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charger_VAC__c</fullName>
        <formula>IF(OR(ISBLANK(TEXT(Charger_VAC_Selected__c)), ISBLANK(TEXT(Charger_Voltage_Selected__c))), Charger_VAC_Options__c, TEXT(Charger_VAC_Selected__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charger VAC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Volt_Phase__c</fullName>
        <formula>IF(OR(ISBLANK(TEXT(Charger_Voltage_Selected__c)), ISBLANK(TEXT(Charger_VAC_Selected__c))), Charger_Voltage_Options__c, TEXT(Charger_Voltage_Selected__c)) &amp; &quot; / &quot; &amp; SBQQ__Product__r.Charger_Phase__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charger Volt/Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Voltage_Options_Read_Only__c</fullName>
        <formula>Charger_Voltage_Options__c</formula>
        <label>Chgr Volt. Options</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Voltage_Options__c</fullName>
        <label>Charger Voltage Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Voltage_Selected__c</fullName>
        <label>Charger Voltage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Voltage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CostPrice__c</fullName>
        <label>Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Material_Number__c</fullName>
        <label>Customer Material Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMEA_Calculat_sconto_Amount__c</fullName>
        <label>EMEA Calculat. sconto Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Calculat_sconto__c</fullName>
        <label>EMEA Calculat. sconto</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMEA_Comission_Costs_Amount__c</fullName>
        <label>EMEA Comission Costs Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Comission_Costs__c</fullName>
        <label>EMEA Comission Costs</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMEA_Discount_From_Gross_Pricelist_Total__c</fullName>
        <label>EMEA Discount From Gross Pricelist Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Discount_From_Gross_Pricelist__c</fullName>
        <label>EMEA Discount From Gross Pricelist</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMEA_Eco_Contribution_Total__c</fullName>
        <label>EMEA Eco Contribution Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Eco_Contribution__c</fullName>
        <label>EMEA Eco Contribution</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_External_Discount_Total__c</fullName>
        <label>EMEA External Discount Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_External_Discount__c</fullName>
        <label>EMEA External Discount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMEA_Freight_Amount__c</fullName>
        <label>EMEA Freight Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Freight__c</fullName>
        <label>EMEA Freight</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMEA_Guarantee_Costs_Amount__c</fullName>
        <label>EMEA Guarantee Costs Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Guarantee_Costs__c</fullName>
        <label>EMEA Guarantee Costs</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMEA_Internal_Discount_Total__c</fullName>
        <label>EMEA Internal Discount Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Internal_Discount__c</fullName>
        <label>EMEA Internal Discount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMEA_Lead_Adjuster_Total__c</fullName>
        <label>EMEA Lead Adjuster Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Lead_Adjuster__c</fullName>
        <label>EMEA Lead Adjuster</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_List_Price__c</fullName>
        <label>EMEA List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_List_Total__c</fullName>
        <label>EMEA List Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Net_Total__c</fullName>
        <label>EMEA Net Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Other_SDCS_Amount__c</fullName>
        <label>EMEA Other SDCS Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Other_SDCS__c</fullName>
        <label>EMEA Other SDCS</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMEA_Packing_Costs_Amount__c</fullName>
        <label>EMEA Packing Costs Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Packing_Costs__c</fullName>
        <label>EMEA Packing Costs</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMEA_Packing_Expenses_Total__c</fullName>
        <label>EMEA Packing Expenses Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Packing_Expenses__c</fullName>
        <label>EMEA Packing Expenses</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Price_Unit__c</fullName>
        <label>EMEA Price Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMEA_Profit_Margin_Amount__c</fullName>
        <label>EMEA Profit Margin Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Profit_Margin__c</fullName>
        <label>EMEA Profit Margin</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMEA_Raw_Material_Adjuster_Amount__c</fullName>
        <label>EMEA Raw Material Adjuster Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Raw_Material_Adjuster__c</fullName>
        <label>EMEA Raw Material Adjuster</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMEA_Shipment_Costs_Amount__c</fullName>
        <label>EMEA Shipment Costs Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Shipment_Costs__c</fullName>
        <label>EMEA Shipment Costs</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMEA_Transport_Amount__c</fullName>
        <label>EMEA Transport Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Transport__c</fullName>
        <label>EMEA Transport</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMEA_VAT_Amount__c</fullName>
        <label>EMEA VAT Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_VAT_Rate__c</fullName>
        <label>EMEA VAT Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMEA_Volume_Discount_Total__c</fullName>
        <label>EMEA Volume Discount Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Volume_Discount__c</fullName>
        <label>EMEA Volume Discount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMEA_Volume_Rebate_Amount__c</fullName>
        <label>EMEA Volume Rebate Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Volume_Rebate__c</fullName>
        <label>EMEA Volume Rebate</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Effective_Discount__c</fullName>
        <description>Determines the discount on a line item:
- If list price = 0 the effective discount is set to 0
- If the discount percentage is 0 then the effective discount is set to discount amount/list price
- If the discount percentage is not 0 then the effective discount is set to the discount percentage</description>
        <formula>IF(SBQQ__ListPrice__c = 0,0,
IF(SBQQ__Discount__c = 0, SBQQ__AdditionalDiscountAmount__c/SBQQ__ListPrice__c, SBQQ__Discount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines the discount on a line item: 
- If list price = 0 the effective discount is set to 0 
- If the discount percentage is 0 the effective discount is set to discount amount/list price otherwise it is set to the discount percentage</inlineHelpText>
        <label>Effective Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>External_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Configuration</label>
        <referenceTo>External_Configuration__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item_Group_Desc__c</fullName>
        <formula>SBQQ__Product__r.Item_Group_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Group Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Group__c</fullName>
        <label>Item Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_Pricing_Conditions__c</fullName>
        <label>JSON Pricing Conditions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JSON_SAP_configuration__c</fullName>
        <label>JSON SAP configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOB_Number__c</fullName>
        <formula>LOB__r.LOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOB</label>
        <referenceTo>LOB__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <label>Lead Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Line Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>If(SBQQ__NetPrice__c&lt;&gt;0,(SBQQ__NetPrice__c -  CostPrice__c )/SBQQ__NetPrice__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Rental_Rate__c</fullName>
        <label>Total Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Rental_Rate_ea__c</fullName>
        <label>Monthly Rental Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nominal_Voltage__c</fullName>
        <label>Nominal Voltage</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>SBQQ__Product__r.Product_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Selection_Confirmed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Product Selection Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rental_Rate__c</fullName>
        <label>Rental Rate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SAP_Line_Number__c</fullName>
        <label>SAP Line Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Material_Number__c</fullName>
        <label>SAP Material Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Highlight__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Highlight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Type__c</fullName>
        <label>Sort Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier1__c</fullName>
        <label>Tier 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier2__c</fullName>
        <label>Tier 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier3__c</fullName>
        <label>Tier 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_1__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_3__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Watts_Cell__c</fullName>
        <label>Watts/Cell</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Max_disc_amt_less_than_list_price</fullName>
        <active>true</active>
        <description>the max discount AMOUNT must not be greater than the List Price</description>
        <errorConditionFormula>IF(SBQQ__AdditionalDiscountAmount__c &gt;  SBQQ__ListPrice__c, TRUE, FALSE)</errorConditionFormula>
        <errorMessage>The discount must be no more than 100 % of the list price of the product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Max_discount_100</fullName>
        <active>true</active>
        <description>Discount may not be more than 100%</description>
        <errorConditionFormula>IF(SBQQ__Discount__c &gt;  1, TRUE, FALSE)</errorConditionFormula>
        <errorMessage>The discount must be no more than 100 %</errorMessage>
    </validationRules>
</CustomObject>